Fix SigAlgosExtTestWithTLS12 for 8u